--- a/style.css
+++ b/style.css
@@ -14,24 +14,29 @@ body {
 }
 
 h1 {
+    font-family: 'Roboto', sans-serif;
     color: #575F7D;
     font-size: 32px;
     font-weight: 900;
 }
 
 h2 {
-    color: #00B9AE;
-    font-size: 20px;
-    font-weight: lighter;
+    font-family: 'Montserrat', sans-serif;
+    color: #575F7D;
+    font-size: 25px;
+    font-weight: 700;
+    font-style: italic;
+}
+
+h3, h4 {
+    font-family: 'Montserrat', sans-serif;
+    color: #005377;
+    font-size: 25px;
     font-weight: 500;
 }
 
-h1, h2, h3 {
-    font-family: 'Roboto', sans-serif;
-}
-
 a {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     text-decoration: none;
     color: #BFABCB;
     font-weight: 600;
@@ -44,7 +49,7 @@ a:hover {
 
 .container {
   width: 700px;
-  margin: 40px auto;
+  margin: 70px auto;
 }
 
 @media (max-width: 960px) {
@@ -65,25 +70,14 @@ a:hover {
 
 .card-white {
   background-color: white;
-  padding: 38px;
-  box-shadow: 0px 11px 28px rgba(0,0,0,0.1);
-  border-radius: 6px;
+  padding: 40px;
+  box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+  border-radius: 4px;
   margin: 20px 0px;
   text-align: center;
 }
 .img-circle {
   border-radius: 50%;
-}
-
-.btn-1 {
-  background-color: #BFABCB;
-  color: white;
-  padding: 15px 20px;
-  border-radius: 6px;
-}
-
-.btn-1:hover {
-  opacity: 0.7;
 }
 
 .list-inline {
@@ -93,14 +87,14 @@ a:hover {
 
 .list-inline li {
   display: inline;
-  padding: 12px;
+  padding: 10px;
 }
 
 .list-inline i {
-  font-size: 48px;
-  color: rgb(220, 220, 220);
+  font-size: 50px;
+  color: rgb(230, 230, 230);
 }
 
 .list-inline i:hover {
-  opacity: 0.7;
+  color: black;
 }
